# rbln-model-zoo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md
assets/: README.md
cpp/: README.md
cpp/image_classification/: README.md  compile.py  main.cc  main_async.cc  requirements.txt
cpp/object_detection/: README.md  compile.py  main.cc  main_async.cc  requirements.txt
cpp/text_generation/: CMakeLists.txt  README.md  compile.py  llama_class_example.cc  llama_class_example.hpp  llama_main.cc  requirements.txt
huggingface/diffusers/image-to-image/stable_diffusion_3_i2i/: requirements.txt
huggingface/diffusers/image-to-video/stable_video_diffusion/: requirements.txt
huggingface/diffusers/video-to-video/cosmos-predict1-14b/: requirements.txt
huggingface/diffusers/video-to-video/cosmos-predict1-7b/: requirements.txt
huggingface/third-party-models/3d-mesh-reconstruction/stable-fast-3d/: compile.py  inference.py  modeling_stable_fast_3d.py  requirements.txt
huggingface/third-party-models/3d-mesh-reconstruction/triposr/: compile.py  inference.py  modeling_triposr.py  requirements.txt
huggingface/third-party-models/depth-estimation/Depth-Anything-3/: compile.py  inference.py  modeling_depth_anything_3.py  requirements.txt
huggingface/third-party-models/video-to-video/cosmos_transfer1/: requirements.txt
pytorch/audio/speech_separation/convtasnet/: requirements.txt
pytorch/nlp/labse/: requirements.txt
scripts/: count_models.py
serving/triton_inference_server/resnet50/: README.md
serving/triton_inference_server/yolov8/: README.md
(+94 files in other folders)
